Integrated with sqlserver and done the necessary changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=SpringAPI
+spring.datasource.url=jdbc:sqlserver://100.42.188.112:1433;databaseName=EcomMgmtDb2;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.username=EcomDbAdmin
+spring.datasource.password=EcomDbAdmin-2025
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# JPA and Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.show-sql=true
